syntax = "proto3";

package juno.email;

import "identifiers.proto";

service EmailService {
  rpc sendEmail(SendEmailRequest) returns (SendEmailRequestResponse);
}

message SendEmailRequest {
    string destination = 1;
    string subject = 2;
    string body = 3;
}

message SendEmailRequestResponse {
    bool success = 1;
}